# fruit-classifier-360

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  commands.py  pyproject.toml
data/: raw.dvc
fruit_classifier/configs/: config.yaml
fruit_classifier/configs/data/: data.yaml
fruit_classifier/configs/logging/: logging.yaml
fruit_classifier/configs/model/: model.yaml
fruit_classifier/configs/train/: train.yaml
fruit_classifier/data/: datamodule.py  dataset.py
fruit_classifier/inference/: client.py
fruit_classifier/models/: baseline.py  custom_cnn.py
fruit_classifier/training/: lightning_module.py
fruit_classifier/utils/: download.py  paths.py
scripts/: convert_onnx_to_mlflow.py  export_onnx.py  export_tensorrt.sh  serve_mlflow.sh  serve_triton.sh  test_mlflow.py  triton_config.pbtxt
